--- a/datepicker/tests/tests.html
+++ b/datepicker/tests/tests.html
@@ -36,7 +36,7 @@
         <script src="suites/inline.js"></script>
     </head>
     <body>
-        <h1 id="qunit-header">bootstrap-datepicker</h1>
+        <h1 id="qunit-header">bootstrap-datepicker git</h1>
         <h2 id="qunit-banner"></h2>
         <div id="qunit-testrunner-toolbar"></div>
         <h2 id="qunit-userAgent"></h2>
